# Lidarodometry

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: para.txt
include/: Paramreader.h  lidarodometry.h
launch/: lidarodometry.launch
rviz_cfg/: lidarodometry.rviz
src/: scanRegistration.cpp
